--- a/bower.json
+++ b/bower.json
@@ -12,15 +12,14 @@
     "url": "git://github.com/justinwoo/purescript-lenient-html-parser.git"
   },
   "dependencies": {
-    "purescript-prelude": "^3.3.0",
-    "purescript-console": "^3.0.0",
-    "purescript-string-parsers": "^3.1.0",
-    "purescript-generics-rep": "^5.4.0"
+    "purescript-prelude": "#compiler/0.12",
+    "purescript-console": "#compiler/0.12",
+    "purescript-string-parsers": "#compiler/0.12",
+    "purescript-generics-rep": "#compiler/0.12"
   },
   "devDependencies": {
-    "purescript-psci-support": "^3.0.0",
-    "purescript-aff": "^4.1.1",
-    "purescript-test-unit": "^13.0.0",
-    "purescript-node-fs-aff": "^5.0.0"
+    "purescript-aff": "#compiler/0.12",
+    "purescript-test-unit": "justinwoo/purescript-test-unit#compiler/0.12",
+    "purescript-node-fs-aff": "justinwoo/purescript-node-fs-aff#compiler/0.12"
   }
 }
