fix issues with incorrect and really slow parsing
1. can't use `string` to match string literals. have to use `regex` instead.
2. my upgrade to string-parsers was godawful and slow. have to fix upstream.
3. added more handling of broken strucutres like `<script/>`

--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "purescript-prelude": "^4.0.0",
     "purescript-console": "^4.1.0",
-    "purescript-string-parsers": "^4.0.0",
+    "purescript-string-parsers": "justinwoo/purescript-string-parsers#no-code-points",
     "purescript-generics-rep": "^6.0.0"
   },
   "devDependencies": {
